--- a/CryptoMonitor/WebContent/pages/monitorBinance.xhtml
+++ b/CryptoMonitor/WebContent/pages/monitorBinance.xhtml
@@ -6,20 +6,25 @@
 	xmlns:p="http://primefaces.org/ui">
 <h3><p:outputLabel value="Monitor Crypto"></p:outputLabel></h3>
 <h:form>
-<p:panelGrid columns="2">
-	<p:outputLabel value="Seleccione el par:"></p:outputLabel>
-	<p:selectOneListbox id="pairs" value="#{monitorBinance.pair}">
+<div align="center">
+<p:panelGrid columns="2" columnClasses="label, value">
+	<p:outputLabel value="Seleccione el par:" for="pairs"></p:outputLabel>
+	<p:selectOneButton id="pairs" value="#{monitorBinance.pair}">
 		<f:selectItem itemLabel="BTC" itemValue="BTC"></f:selectItem>
 		<f:selectItem itemLabel="ETH" itemValue="ETH"></f:selectItem>
 		<f:selectItem itemLabel="BNB" itemValue="BNB"></f:selectItem>
-	</p:selectOneListbox>
+	</p:selectOneButton>
 	
-	<p:commandButton value="Ver" actionListener="#{monitorBinance.execute}" update="signals"></p:commandButton>
+	<p:outputLabel value="Seleccione los indicadores" for="indicators"/>
+	<p:selectManyCheckbox id="indicators" value="#{monitorBinance.selectedIndicators}">
+		<f:selectItems value="#{monitorBinance.checkIndicators}" var="i" itemValue="#{i}" itemLabel="#{i}"></f:selectItems>
+	</p:selectManyCheckbox>	
 </p:panelGrid>
+</div>
+<p:commandButton value="Ver" actionListener="#{monitorBinance.execute}" update="signals"></p:commandButton>
 
 <p:scrollPanel id="signals" style="width:100%;height:500px" rendered="#{not empty monitorBinance.signals}">
-	<p:repeat value=#{monitorBinance.signals}" var="signal">
-	</p:repeat>
+
 </p:scrollPanel>
 </h:form>
 
